# bank-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: pipeline.yml
client/: .gitignore  Cargo.toml  build.rs
client/src/: entities.rs  lib.rs
client/src/invoker/: mod.rs
client/src/invoker/grpc/: account.rs  mod.rs  storage.rs  transaction.rs
client/src/invoker/http/: account.rs  mod.rs  storage.rs  transaction.rs
client/src/schemas/: request.rs  response.rs
example/: Cargo.toml
example/src/: main.rs
proto/: bank.proto
server/: .gitignore  Cargo.toml  build.rs
server/server/backup/: backup.json
server/src/: main.rs
server/src/adapter/: mod.rs
server/src/adapter/router/grpc/: mod.rs
server/src/adapter/router/http/: mod.rs
server/src/adapter/router/http/handlers/: account.rs  storage.rs  transaction.rs
server/src/adapter/storage/: cache.rs  mod.rs
server/src/adapters/router/: mod.rs
server/src/adapters/router/grpc/: mod.rs
server/src/adapters/router/handlers/: account.rs  storage.rs  transaction.rs
server/src/adapters/router/http/: mod.rs
server/src/adapters/router/http/handlers/: account.rs  mod.rs  storage.rs  transaction.rs
server/src/adapters/storage/: cache.rs  mod.rs  storage.rs
server/src/domain/: mod.rs
server/src/domain/entities/: account.rs  transaction.rs
server/src/domain/errors/: mod.rs
server/src/domain/usecases/: account.rs  storage.rs  transaction.rs
server/src/server/: cli.rs  mod.rs
