[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../client" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
